--- a/SNA_Marketing.ipynb
+++ b/SNA_Marketing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +313,33 @@
     "#### Smallest Community:\n",
     "\n",
     "The smallest community comprises only 3 nodes. This indicates a smaller, more isolated group within the network. It could represent a subgroup with specific characteristics or connections, or it might be an outlier with fewer connections compared to the rest of the network. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 9: \n",
+    "# Selecting the largest three communities and drawing them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sorting communities by size in descending order and selecting the three largest communities\n",
+    "largest_communities = sorted(communities, key=len, reverse=True)[:3]\n",
+    "\n",
+    "# Create a new graph containing only the nodes from the three largest communities\n",
+    "largest_communities_graph = graph.subgraph(node for community in largest_communities for node in community)\n",
+    "\n",
+    "# Draw the graph\n",
+    "pos = nx.spring_layout(largest_communities_graph)\n",
+    "nx.draw(largest_communities_graph, pos, with_labels=True, node_size=50, node_color=\"skyblue\", font_size=8)\n",
+    "plt.title(\"Three Largest Communities\")\n",
+    "plt.show()"
    ]
   }
  ],
